# cure-new-flow

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  PROJECT_MEMORY.md  README.md  README_BEFOREImplementing.md  README_INFRA_SETUP.txt  Title_Examination_Notes_System_Prompt.md  pyproject.toml  requirements.txt  titlePro_Backlog.md  titlePro_dir_structure.md
.github/workflows/: deploy.yml
0523/Manatee_FERNANDEZ_fromLocalDb/: DOC_LIST_FOR_REVIEW_fromLocalDb.md  RAW_TWO_OWNER_SEARCH_EXAM_fromLocalDb.md  Title_Examination_Notes_fromLocalDb.md  candidate_documents.json  download_manifest.json  download_subject_docs.py  ocr_downloads.py  (+3 more)
config/: county_property_appraiser_urls.json  county_tax_urls.json  input_names.example.json  mis_pilot_ca_subjects.json  mis_pilot_oh_subjects.json  names.example.json  titlepro247_config.json.example
docs/: AGENT_INIT_PROMPT.md  CA_Examples.md  CA_Implementation_Update_2005.md  CC_recon.md  COUNTY_TAX_RECIPE_HOWTO.md  CUYAHOGA_AGENT_PROMPT.md  County_URL_Mapping_CA_OH.md  National_County_Inventory.md  README_output_verification.md  TitlePro247 Document Retrieval Selenium Automation Guide.md  acclaimweb_sandiego_probe.md
ph2_cure_ui/: PROJECT_SUMMARY.md  README.md  USABILITY_SUGGESTIONS.md
tests/: oc_tax_manual_test.py  playwright_cure_test.py  run_subjects_sequential.py  test_gated_automation.py
tools/: audit_existing_case.py  bench_fromer.py  bench_fromer_results.txt  gen_0616_case.py  ingest_county_search_sheet.py  probe_landmark_pa.py  reconstruct_skinner_manifest.py  scan_report_leaks.py
verify-cure-report-skill/: INSTALL.txt
(+702 files in other folders)
